# nexios

./: .flake8  .gitignore  404.html  CHANGELOG.md  api-examples.html  concepts.html  coverage.xml  docs.html  hashmap.json  index.html  markdown-examples.html  nexios.cli.py  nexios.config.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  sitemap.xml  team.html  tox.ini
.github/: funding.yml
api/: application.html  exceptions.html  index.html  request.html  response.html  routing.html  websockets.html
application/: index.html
architecture/: asgi.html  async-python.html
assets/: api-examples.md.ChXbvVcU.js  api-examples.md.ChXbvVcU.lean.js  api_application.md.D_4zqWcA.js  api_application.md.D_4zqWcA.lean.js  api_exceptions.md.DuWakn1O.js  api_exceptions.md.DuWakn1O.lean.js  api_index.md.DiBISodc.lean.js  api_request.md.Dswcv7cr.js  api_request.md.Dswcv7cr.lean.js  api_response.md.Dwtlc0dd.js  api_response.md.Dwtlc0dd.lean.js  api_routing.md.BHt0R_WK.js  api_routing.md.BHt0R_WK.lean.js  api_websockets.md.D8Xa6xi0.js  api_websockets.md.D8Xa6xi0.lean.js  app.IiqOQcMZ.js  architecture_asgi.md.dYl_s3fF.js  architecture_asgi.md.dYl_s3fF.lean.js  architecture_async-python.md.qwKx5Ec5.js  architecture_async-python.md.qwKx5Ec5.lean.js  concepts.md.DaBjLj5k.js  concepts.md.DaBjLj5k.lean.js  docs.md.GSLw8NPD.js  docs.md.GSLw8NPD.lean.js  guide_authentication.md.DGe4QZhk.js  guide_authentication.md.DGe4QZhk.lean.js  guide_class-based-handlers.md.CGqZjlyY.js  guide_class-based-handlers.md.CGqZjlyY.lean.js  guide_cli.md.CFu5Tb-2.js  guide_cli.md.CFu5Tb-2.lean.js  guide_configuration.md.duvezLUA.js  guide_configuration.md.duvezLUA.lean.js  guide_cookies.md.D9Ka2iVF.js  guide_cookies.md.D9Ka2iVF.lean.js  guide_cors.md.DCt1QNdl.js  guide_cors.md.DCt1QNdl.lean.js  guide_dependency-injection.md.DgENOSRj.js  guide_dependency-injection.md.DgENOSRj.lean.js  guide_error-handling.md.Cc2q4rBL.js  guide_error-handling.md.Cc2q4rBL.lean.js  (+60 more)
author/: index.html
basic_routing/: index.html
benchmarks/: analyze_results.py  benchmark_summary_20250616_113050.csv  run_benchmarks.py
blog/: index.html
docs/: README.md  SUMMARY.md  about.md  api-examples.md  authentication.md  concepts.md  contributing.md  cors.md  csrf.md  dependency-injection.md  docs.md  events.md  exceptions.md  file-router.md  gzip.md  index.md  logging.md  managing_config.md  markdown-examples.md  misc.md  openapi.md  request-and-response.md  session.md  static-files.md  team.md  websockets.md  what-is-nexios.md
docs-lagacy/: README.md  basic-example.md  events.md  file-router.md  gzip.md  index.md  managing_config.md  philosophy.md
docs-refactor/: index.md
examples/: auth_router.py  basic_rest_api.py  file_upload.py  form_data_validation.py  lifespan_example.py  streaming_middleware.py
guide/: authentication.html  class-based-handlers.html  cli.html  (+20 more)
(+431 files in other folders)
