[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexios"
version = "2.4.12"
description = "Nexios is a modern, high-performance ASGI web framework for Python with multi-server support with zero overhead."
authors = [
    {name = "Chidebele Dunamis", email = "techwithdunamix@gmail.com"}
]
license = "MIT"
homepage = "https://github.com/nexios-labs/nexios"
repository = "https://github.com/nexios-labs/nexios"
documentation = "https://nexios-docs.netlify.app/"
readme = "readme.md"
keywords = [
    "ASGI",
    "backend",
    "framework",
    "web",
    "Python",
    "async",
    "asynchronous",
    "uvicorn",
    "granian",
    "web server",
    "API",
    "scalable",
    "real-time",
    "concurrent",
    "HTTP",
    "websocket"
]
requires-python = ">=3.9"
dependencies = [
    "uvicorn>=0.27.0",
    "anyio==4.3.0",
    "itsdangerous>=2.1.2",
    "python-multipart>=0.0.6",
    "typing-extensions==4.12.2",
    "pydantic>=2.0,<3.0",
    "click>=8.1.3",
]

[project.optional-dependencies]
templating = ["jinja2>=3.1.6"]
jwt = ["pyjwt>=2.7.0"]
granian = ["granian>=1.2.0"]
all = ["granian>=1.2.0", "pyjwt>=2.7.0", "jinja2>=3.1.6"]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4,<8.4.0",
    "mkdocs>=1.2.3",
    "coverage>=6.3,<8.0",
    "httpx>=0.23.3,<0.29.0",
    "typing-extensions==4.12.2",
    "pytest-asyncio>=0.25.3,<0.27.0",
    "pyjwt>=2.7.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "flake8-pyproject"
]

[project.scripts]
nexios = "nexios.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_fixture_scope = "function"
addopts = "--ignore=benchmarks"


[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
files = ["nexios"]
exclude = "(nexios/templates/.*)"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip = [".git", "__pycache__", "build", "dist", ".venv", ".pytest_cache", "htmlcov", "node_modules", "templates", "docs"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E402", "E741"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".pytest_cache",
    "htmlcov",
    "node_modules",
    "templates",
    "docs",
    "test/",
    "sandbox.py"

]
per-file-ignores = [
    "__init__.py: F401",
    "test/*: F401",
    "examples/*: F401",
    "benchmarks/*: F401"
]
max-complexity = 15

